# GraphicsPractice

LearnOpengl/: CMakeLists.txt  camera.h  main.cpp  shader.cpp  shader.h  shaders.frag  shaders.vert
LearnOpengl/include/glad/: glad.h
LearnOpengl/resources/: light.frag  light.vert  shaders.frag  shaders.vert
LearnOpengl/resources/shaders/: crosshair.frag  crosshair.vert
LearnOpengl/src/: glad.c
